<resources>
    <string name="app_name">AnyNotes</string>

    <string name="menu_all">All notes</string>
    <string name="menu_actual">Actual notes</string>
    <string name="menu_important">Important notes</string>
    <string name="menu_drafts">Drafts</string>
    <string name="menu_deleted">Deleted notes</string>
    <string name="menu_alarms">Notes with alarm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="example_title">Note\'s title</string>
    <string name="example_date">Create date</string>
    <string name="example_text">There is a note content... There is a note content... There is a note content... There is a note content... There is a note content... There is a note content... There is a note content... There is a note content... There is a note content... There is a note content...</string>

    <string name="action_settings">Settings</string>
    <string name="action_estimate">Rate us</string>
    <string name="action_sort">Sort</string>
    <string name="action_exit">Exit</string>
    <string name="action_search">Search</string>
    <string name="action_alarm">Set alarm</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_budget">Home Budget</string>
    <string name="action_phonebook">AddressPhoneBook</string>

    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="seek_font_size">Font size:</string>
    <string name="seek_brightness">Brightness:</string>

    <string name="chooser_title_share">Share note</string>
    <string name="empty_list">No notes yet. Add new note.</string>

    <string name="voice_direction">Speak</string>
    <string name="reminder_toolbar_title">Reminder</string>
    <string name="repeat_1_hour">1 hour</string>
    <string name="repeat_3_hour">3 hours</string>
    <string name="repeat_6_hour">6 hours</string>
    <string name="repeat_12_hour">12 hours</string>
    <string name="repeat_1_day">1 day</string>
    <string name="repeat_2_day">2 days</string>
    <string name="repeat_3_day">3 days</string>
    <string name="repeat_10_day">10 days</string>
    <string name="repeat_1_week">1 week</string>
    <string name="repeat_2_week">2 weeks</string>
    <string name="repeat_3_week">3 weeks</string>
    <string name="repeat_4_week">4 weeks</string>
    <string name="repeat_1_month">1 month</string>
    <string name="repeat_3_month">3 months</string>
    <string name="repeat_6_month">6 months</string>
    <string name="repeat_year">year</string>
    <string name="repeat_none">Not repeating</string>

    <string name="rington_default">Default</string>
    <string name="rington_1">Ringtone 1</string>
    <string name="rington_2">Ringtone 2</string>
    <string name="rington_3">Ringtone 3</string>
    <string name="rington_4">Ringtone 4</string>
    <string name="rington_5">Ringtone 5</string>
    <string name="rington_6">Ringtone 6</string>

    <string name="new_note_hint_title">Note\'s title</string>
    <string name="new_note_hint_text">Let\'s write your idea</string>

    <string name="registration_dialog_title">Registration</string>
    <string name="login_dialog_title">Login</string>
     <string name="registration_btn_ok">Ok</string>
    <string name="registration_btn_register">Registration</string>
    <string name="registration_btn_cancel">Cancel</string>
    <string name="hint_login">E-mail</string>
    <string name="error">Error!</string>
    <string name="error_network">Error! Check network.</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_repeat">Repeat password</string>

    <string name="registration_btn_forgot_password">Forgot password</string>
    <string name="registration_btn_change_password">Change password</string>
    <string name="tost_send_password_to_email">New password has sent to </string>
    <string name="tost_error_3020">Unable to find user with the specified login</string>
    <string name="tost_error_3003">Invalid login or password</string>

    <string name="hint_search">Search keyword</string>
    <string name="search_dialog_title">Search keyword</string>
    <string name="menu_search">Search results</string>

    <string name="banner_ad_unit_id">ca-app-pub-6973932400636393/3338064660</string>
    <string name="banner_inner_ad_unit_id">ca-app-pub-6973932400636393/4278244269</string>

    <string name="color">Color sheme</string>

</resources>
