<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all_notes"
            android:icon="@drawable/v_ic_note_color_24dp"
            android:title="@string/menu_all" />
        <item
            android:id="@+id/important_notes"
            android:icon="@drawable/v_ic_star_drawer_24dp"
            android:title="@string/menu_important" />
        <item
            android:id="@+id/actual_notes"
            android:icon="@drawable/v_ic_star_border_drawer_24dp"
            android:title="@string/menu_actual" />

        <item
            android:id="@+id/drafts"
            android:icon="@drawable/v_ic_draft_color_24dp"
            android:title="@string/menu_drafts" />
        <item
            android:id="@+id/deleted"
            android:icon="@drawable/v_delete_color_24"
            android:title="@string/menu_deleted" />

        <item
            android:id="@+id/alarms"
            android:icon="@drawable/v_alarm_color_24"
            android:title="@string/menu_alarms" />
    </group>

</menu>
