<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:icon="@mipmap/fa_sort_white"
        android:title="@string/action_sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@mipmap/ic_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_estimate"
        android:orderInCategory="100"
        android:title="@string/action_estimate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
