<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingLeft="32dp">

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:ems="50"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:hint="@string/hint_login"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:hint="@string/hint_password"
            android:inputType="textWebPassword" />

        <EditText
            android:id="@+id/et_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:hint="@string/hint_password_repeat"
            android:inputType="textWebPassword" />

    </LinearLayout>
</ScrollView>